<resources>
    <string name="app_name">Panti Asuhan Bani Salam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trasnfer_bank">Transfer Bank</string>
    <string name="scan_qr">Scan Kode QR</string>
    <string name="latar_belakang">Sehubungan dengan keberadaan Panti Yatim Piatu Dhu’fa Bani Salam yang Berdiri dengan tempat seadanya juga masih rumah KONTRAK / SEWA, Panti Yatim Bani Salam sudah menampung anak-anak khususnya dari daerah-daerah peloksok pekampungan, mengurus semua kebutuhan sandang pangan dan mendidik dengan Ilmu Agama Islam dan Ilmu Pengetahuan Umum Dengan di Sekolahkan, supaya nanti menjadi anak-anak yang sehat, pintar, sholeh dan mandiri.</string>
    <string name="visi">Mempersiapkan anak-anak Yatim dan Dhuafa menjadi pribadi yang  beriman , berpendidikan dan mandiri.</string>
    <string name="misi">1. Bersama untuk beribadah dan mencari ridho Allah SWT. \n\n2. Membantu  meringankan beban hidup dan Pendidikan anak-anak Yatim Piatu &amp; Dhu’afa.
    \n\n3. Menjadi penghubung antara orang-orang yang  mampu (Donatur) dengan anak-anak Yatim &amp; Dhu’afa. \n\n4. Mewujudkan  impian dan cita-cita anak-anak Yatim &amp; Dhu’afa dalam hal pendidikan dan kemandirian.
    \n\n5. Menyantuni, mendidik dan menyayangi  anak-anak  Yatim Piatu &amp; Dhu’afa. \n\n6. Berlatih tekun dan bersabar juga ikhlas dan istiqomah. \n\n7. Memanfa’atkan tenaga, ilmu dan potensi yang ada.
    \n\n8. Membantu Program pemerintah dalam hal pendidikan dan kelangsungan hidup anak-anak Yatim Fiatu dan Dhu’afa, yang mana dalam Undang-undang 45: Pasal 34, Ayat 1 tercantum: Fakir miskin dan anak-anak yang terlantar di pelihara oleh negara.</string>
    <string name="tv_nomor">1.</string>
    <string name="gambar">Gambar</string>
    <string name="kategori">Kategori</string>
    <string name="tv_keterangan">Keterangan</string>
    <string name="tf_bank">1. Masuk ke menu bank anda, Internet/Mobile/ATM Banking. \n\n2. Pilih menu <b>TRANSFER</b>.
    \n\n3. Masukkan <b>nomor rekening</b> panti sesuai dengan bank yang dipilih. \n\n4. Masukkan jumlah dana yang diinginkan.
    \n\n5. Selesaikan transaksi. \n\n6. <b>Konfirmasi</b> donasi anda kepada pihak panti. Kontak tersedia di halaman Tentang Panti.
    \n\nMulai dari Rp. 10.000 anda sudah bisa berdonasi kepada panti. Jazakallah Khairan Katsiran.</string>
    <string name="tf_ewallet">1. Pastikan anda sudah mendownload aplikasi e-wallet yang tersedia. \n\n2. Buka aplikasi e-wallet yang ada inginkan.
    \n\n3. Pilih menu <b>BAYAR</b>. \n\n4. Scan code qr atau masukkan gambar qode qr yang sudah terdownload.
    \n\n5. Masukkan jumlah dana yang diinginkan. \n\n6. Pilih metode pembayaran. \n\n7. Konfirmasi pembayaran. \n\n8. <b>Konfirmasi</b> donasi anda kepada pihak panti. Kontak tersedia di halaman Tentang Panti.
    \n\nMulai dari Rp. 1000 anda sudah bisa berdonasi kepada panti. Jazakallah Khairan Katsiran.</string>
    <string name="tf_app">1. Masuk ke halaman donasi . \n\n2. pilih menu "Scan Kode QR".
    \n\n3. Klik tombol <b>Donasi Sekarang</b>. \n\n4. Masukkan jumlah donasi yang diinginkan
    \n\n5. Isi informasi diri untuk pendataan panti dan konfirmasi. \n\n6. Pilih metode pembayaran. \n\n7. Konfirmasi pembayaran. \n\n8. <b>Konfirmasi</b> donasi anda kepada pihak panti. Kontak tersedia di halaman Tentang Panti.
    \n\nMulai dari Rp. 10.000 anda sudah bisa berdonasi kepada panti. Jazakallah Khairan Katsiran.</string>
    <string name="tf_barang">1. <b>Konfirmasi</b> donasi anda kepada pihak panti bahwa ingin mengirim barang. Kontak tersedia di halaman Tentang Panti. \n\n2. Donasi bisa berupa Pakaian/Perlengkapan Sekolah/Kebutuhan Sehari-hari/Buku/DLL.
    \n\n3. Kirimkan donasi ke alamat panti. \n\n4. Tetap kontak panti perihal donasi yang anda kirimkan.
    \n\nJazakallah Khairan Katsiran. \n\nNotes : \n\nAlamat : Jl Terusan Buah Batu No 283 Dekat Tol Buah Batu Cipagalo, Kujangsari, Kec. Bandung Kidul, Kota Bandung, Jawa Barat 40287</string>

    <string name="notif_title">Kegiatan Baru</string>
    <string name="notif_message">Ada kegiatan baru lho, yuk buka aplikasi!
</string>
    <string name="notif_channel_id" translatable="false">reminder</string>
    <string name="notif_channel_name">Reminder</string>
    <string name="notif_channel_desc">Reminder update data
</string>

</resources>