<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.about.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="-5dp"
            android:alpha="0.3"
            android:src="@drawable/pengajian" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/tv_nama_panti"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Panti Asuhan Yatim &amp; Dhuafa Bani Salam"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/layout_button_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_header"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_telepon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Telepon"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:backgroundTint="@color/white"
                app:icon="@drawable/ic_call"
                app:iconSize="18dp"
                app:iconPadding="4dp"
                app:iconTint="@color/blue"
                style="@style/Widget.MaterialComponents.Button.Icon" />

            <Button
                android:id="@+id/btn_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kirim SMS"
                android:textAllCaps="false"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:backgroundTint="@color/white"
                app:icon="@drawable/ic_message"
                app:iconSize="18dp"
                app:iconPadding="4dp"
                app:iconTint="@color/purple"
                style="@style/Widget.MaterialComponents.Button.Icon" />

            <Button
                android:id="@+id/btn_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Whatsapp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:backgroundTint="@color/white"
                app:icon="@drawable/whatsapp"
                app:iconSize="18dp"
                app:iconPadding="4dp"
                app:iconTint="@color/green_500"
                style="@style/Widget.MaterialComponents.Button.Icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button_about"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/layout_button_contact"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_children"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_children"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Anak"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_manager"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Pengurus"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_gallery"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Galeri"
                        android:textColor="@color/black" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_map"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Lokasi"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layout_button_about">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_judul_latar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_content_title"
                    android:padding="10dp"
                    android:text="Latar Belakang"
                    android:textColor="@color/black"
                    android:elevation="2dp"
                    app:drawableRightCompat="@drawable/ic_arrow_down"/>

                <RelativeLayout
                    android:id="@+id/tv_isi_latar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_content"
                    android:visibility="gone"
                    android:elevation="1dp">

                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1px"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latar_belakang"
                        android:lineSpacingExtra="2dp"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="12dp"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_judul_visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_content_title"
                    android:padding="8dp"
                    android:text="Visi"
                    android:textColor="@color/black"
                    android:elevation="2dp"
                    app:drawableRightCompat="@drawable/ic_arrow_down"/>

                <RelativeLayout
                    android:id="@+id/tv_isi_visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_content"
                    android:visibility="gone"
                    android:elevation="1dp">

                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1px"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visi"
                        android:lineSpacingExtra="2dp"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="12dp"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_judul_misi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_content_title"
                    android:padding="8dp"
                    android:text="Misi"
                    android:textColor="@color/black"
                    android:elevation="2dp"
                    app:drawableRightCompat="@drawable/ic_arrow_down"/>

                <RelativeLayout
                    android:id="@+id/tv_isi_misi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_content"
                    android:visibility="gone"
                    android:elevation="1dp">

                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_height="1px"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/misi"
                        android:textColor="@color/black"
                        android:lineSpacingExtra="2dp"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="12dp"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>